{{$NEXT}}

v2.021    2021-10-15 12:49:02+02:00 Europe/Berlin

 - Ignore manually configured 'isakmp keepalive' options at
   'tunnel-group ipsec-attributes'.

2.020     2020-12-18 13:01:44+01:00 Europe/Berlin

 - Fixed merging of crypto map from raw.
   This failed if number of seq nums from raw was smaller than from Netspoc.
 - Fixed again: Sanity check for access-list bound to more than one interface.
   Also ignore interface that is shutdown or has no IP.

2.019     2020-11-05 12:43:19+01:00 Europe/Berlin

 - Fixed again: Sanity check for access-list bound to more than one interface.
   Also ignore shutdown interfaces of unmanaged VRF.

2.018     2020-11-04 11:34:13+01:00 Europe/Berlin

 - Fix: Sanity check for access-list bound to more than one interface
   is only done for managed interfaces of device having multiple VRFs.

2.017     2020-11-02 12:42:58+01:00 Europe/Berlin

 - Crypto map entries from raw file are prepended
   to entries from Netspoc now.
 - Fix: More then one crypto map entry can be added in raw file now.

2.016     2020-08-13 15:08:13+02:00 Europe/Berlin

 - Attributes of crypto map can be changed and added from raw files now.
   Changing attribute 'match address' appends or prepends ACL lines.
 - If a reload banner is preceeded by more than 3 empty lines,
   these are ignored altogether now.
 - Fixed new config option "compress_at".

2.015     2020-04-23 16:38:12+02:00 Europe/Berlin

 - Compress files even with hardlinks, using option -f of bzip2.
 - New config option "compress_at" with default value 4
   in config file (/usr/local)/etc/netspoc-approve
 - Allow not only 3 but 4 empty lines before reload banner.
 - Strip CR at end of lines read from device.
   This is useful when applying drc3.pl directly to output of "sh run".

2.014     2019-11-01 11:57:04+01:00 Europe/Berlin

 - Double quoted string is now accepted for map-value of ldap attribute-map.

2.013     2019-10-16 15:18:04+02:00 Europe/Berlin
