@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+ - Fix: Show warning if ASA has interface that isn't known in Netspoc.
+
 v2.021    2021-10-15 12:49:02+02:00 Europe/Berlin
 
  - Ignore manually configured 'isakmp keepalive' options at
